--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@types/mongoose": "^5.11.97",
     "ably": "^1.2.36",
     "axios": "^1.2.1",
+    "chart.js": "2.9.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-prettier": "^4.2.1",
+    "ethereum-block-by-date": "^1.4.7",
     "ethers": "^5.0.0",
     "express": "^4.18.2",
     "ffmpeg-static": "^5.1.0",
